maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: illegal start of simple expression
  val x = case(0);
          ^ShortestPathMaze:23: error: illegal start of simple expression
  var y = case(1);
          ^